--- a/site/index.html
+++ b/site/index.html
@@ -650,7 +650,7 @@
             data-aos-duration="500" data-aos-delay=400>
             <div class="card-body rounded">
               <h4 class="card-title" id="card-title">Video Editor</h4>
-              <a href="https://www.fiverr.com/hasibulhasan442">
+              <a href="https://www.youtube.com/c/Top10Squad">
                 <h5 class="font-italic card-subtitle mb-2">Top 10 Squad(Youtube Channel) </h5>
               </a>
               <p class="card-text">2018-2019</p>
