--- a/site/index.html
+++ b/site/index.html
@@ -783,7 +783,7 @@
           <h2 class="pt-5 headline">Interested To Work</h2>
           <p>I am available for doing UiUx design, Python Application Development, Web Development, Java Desktop
             Application, Web hosting, AI and ML. Feel free to contact me</p>
-          <a class="btn mt-3" href="#" role="button">Contact</a>
+          <a class="btn mt-3" href="#contact" role="button">Contact</a>
         </div>
       </div>
     </div>
