--- a/site/index.html
+++ b/site/index.html
@@ -684,9 +684,9 @@
 
   <!-------------------Recent Portfolio------------------------>
   <section class="project-area pb-5 pt-5" id="portfolio">
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
       <div class="project-title pb-5">
-        <h1>Recent Portfolio</h1>
+        <h1 >Recent Portfolio</h1>
       </div>
 
       <div class="text-center pb-5">
@@ -776,7 +776,7 @@
   <!--------------------Interested To Work -------------->
 
   <section class="work">
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
       <div class="row pb-5">
         <div class="col-sm-1"></div>
         <div class="col-sm-6">
@@ -803,8 +803,8 @@
 
     <div class="container">
       <h1 data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300">Contact Me</h1>
-      <div class="row">
-        <div class="col-sm-6">
+      <div class="row" >
+        <div class="col-sm-6" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
           <div class="row">
             <div class="col-sm-12">
               <div class="card mb-2">
@@ -864,7 +864,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6">
+        <div class="col-sm-6" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
           <div class="card">
             <div class="card-body">
               
