--- a/site/index.html
+++ b/site/index.html
@@ -242,7 +242,7 @@
                 <li>PhP</li>
                 <li>Jquery</li>
                 <li>Javascript</li>
-                <li>Bootstrap/SASS</li>
+                <li>Bootstrap</li>
                 <li>Github/Bitbucket</li>
                 <li>Cpanel</li>
               </ul>
@@ -355,11 +355,11 @@
                     <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="72" aria-valuemin="0"
                       aria-valuemax="100" style="width: 72%"></div>
                   </div>
-                  <h6 class="float-right">40%</h6>
+                  <h6 class="float-right">20%</h6>
                   <h6>Dart</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="40" aria-valuemin="0"
-                      aria-valuemax="100" style="width: 40%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="20" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 20%"></div>
                   </div>
                 </div>
               </div>
@@ -437,11 +437,11 @@
 
                 <div class="col-sm-2"></div>
                 <div class="col-sm-5">
-                  <h6 class="float-right">60%</h6>
+                  <h6 class="float-right">70%</h6>
                   <h6>PhP</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                      aria-valuemax="100" style="width: 60%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 70%"></div>
                   </div>
                   <h6 class="float-right">50%</h6>
                   <h6>Javascript</h6>
@@ -455,6 +455,13 @@
                     <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="68" aria-valuemin="0"
                       aria-valuemax="100" style="width: 68%"></div>
                   </div>
+                  <h6 class="float-right">670%</h6>
+                  <h6>Sass/Scss</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="67" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 67%"></div>
+                  </div>
+                </div>
                 </div>
               </div>
             </div>
