--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,10 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" />
+    <link rel="stylesheet" href="css/imagehover.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/animation.css" />
+
   <link rel="stylesheet" href="plugin/aos.css" />
 
 
@@ -122,19 +124,24 @@
           <div class="middle">
             <div class="row ml-5">
               <div class="col-sm-10">
-                <a class="btn btn-outline-light mr-1 pb-2 border-0" href="https://www.facebook.com/hasibul.hasan.77582" target="_blank">
+                <a class="btn btn-outline-light mr-1 pb-2 border-0" href="https://www.facebook.com/hasibul.hasan.77582"
+                  target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank" href="https://github.com/hasibul442">
+                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank"
+                  href="https://github.com/hasibul442">
                   <i class="fab fa-github"></i>
                 </a>
-                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank" href="https://www.linkedin.com/in/mohammad-hasibul-hasan-823781122/">
+                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank"
+                  href="https://www.linkedin.com/in/mohammad-hasibul-hasan-823781122/">
                   <i class="fab fa-linkedin"></i>
                 </a>
-                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank" href="https://www.instagram.com/hasibul.hasan.shuvo/">
+                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank"
+                  href="https://www.instagram.com/hasibul.hasan.shuvo/">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank" href="https://www.behance.net/hasibulhasan214">
+                <a class="btn btn-outline-light mr-1 pb-2 border-0" target="_blank"
+                  href="https://www.behance.net/hasibulhasan214">
                   <i class="fab fa-behance"></i>
                 </a>
               </div>
@@ -200,7 +207,6 @@
             <div class="card-body rounded ">
               <div class="text-center"><i class="fas fa-palette fa-2x"></i></div>
               <h3 class="card-title pt-2 text-center" id="card-title">Ui/Ux Designer</h3>
-              </>
               <p>Role</p>
               <ul class="roles">
                 <li>Design Landing Page</li>
@@ -227,7 +233,6 @@
             <div class="card-body rounded">
               <div class="text-center"><i class="fas fa-layer-group fa-2x"></i></div>
               <h3 class="card-title text-center pt-2" id="card-title">Web Developer</h3>
-              </>
               <p>Role</p>
               <ul class="roles">
                 <li>Developed Web Page</li>
@@ -258,7 +263,7 @@
             <div class="card-body rounded">
               <div class="text-center"><i class="fas fa-code fa-2x"></i></div>
               <h3 class="card-title pt-2 text-center" id="card-title">Deep Learning</h3>
-              </>
+
               <p>Role</p>
               <ul class="roles">
                 <li>Train Dataset</li>
@@ -443,28 +448,32 @@
 
                 <div class="col-sm-2"></div>
                 <div class="col-sm-5">
+
                   <h6 class="float-right">70%</h6>
                   <h6>PhP</h6>
                   <div class="progress">
                     <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                       aria-valuemax="100" style="width: 70%"></div>
                   </div>
+
                   <h6 class="float-right">50%</h6>
                   <h6>Javascript</h6>
                   <div class="progress">
                     <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100" style="width: 50%"></div>
                   </div>
+
                   <h6 class="float-right">68%</h6>
                   <h6>Jquery</h6>
                   <div class="progress">
                     <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="68" aria-valuemin="0"
                       aria-valuemax="100" style="width: 68%"></div>
                   </div>
-                </div>
+
                 </div>
               </div>
             </div>
+
 
             <div class="mt-3 tab-pane fade" id="nav-uiux" role="tabpanel" aria-labelledby="nav-uiux-tab">
               <div class="row">
@@ -692,7 +701,7 @@
   <section class="project-area pb-5 pt-5" id="portfolio">
     <div class="container" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
       <div class="project-title pb-5">
-        <h1 >Recent Portfolio</h1>
+        <h1>Recent Portfolio</h1>
       </div>
 
       <div class="text-center pb-5">
@@ -705,70 +714,98 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-3 pb-3 certificates">
+        <div class="col-sm-4 pb-3 certificates">
           <div class="our-project">
-            <div class="img">
-              <img src="img/c-1.jpg" alt="certificates-1" class="img-fluid">
-            </div>
 
+            <div class="img imghvr-flip-vert">
+                <img src="img/c-1.jpg" alt="certificates-1" class="img-fluid">
+                <figcaption >
+                  <h5 class="pt-4"><samp class="font-weight-bold">Course:</samp> Introduction To Cybersecurity</h5>
+                  <h6><samp class="font-weight-bold">Org:</samp> Cisco Network Academy</h6>
+                </figcaption>
+            </div>
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 element-item uiux">
+        <div class="col-sm-4 pb-3 element-item uiux">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-flip-diag-1">
               <img src="img/Dashboard-2.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> Admin Penal</h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Adobe XD, Prototype, Figma</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 element-item uiux">
+        <div class="col-sm-4 pb-3 element-item uiux">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-shutter-out-vert">
               <img src="img/Dashboard-1.jpg" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> Dashboard Design</h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Adobe XD, Prototype, Figma</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 element-item certificates">
+        <div class="col-sm-4 pb-3 element-item certificates">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-shutter-out-diag-1">
               <img src="img/c-2.jpg" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> Coronavirus Disease (COVID-19)</h5>
+                <h6><samp class="font-weight-bold">Org:</samp> A2i</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 element-item uiux">
+        <div class="col-sm-4 pb-3 element-item uiux">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-shutter-in-out-horiz">
               <img src="img/Dashboard-3.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> Dashboard Design</h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Adobe XD, Prototype, Figma</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 certificates">
+        <div class="col-sm-4 pb-3 certificates">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-fold-right">
               <img src="img/c-3.jpg" alt="certificates-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> Data Science Methodology</h5>
+                <h6><samp class="font-weight-bold">Org:</samp> IBM, Coursera</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 certificates">
+        <div class="col-sm-4 pb-3 certificates">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-zoom-out-left">
               <img src="img/c-4.jpg" alt="certificates-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Title:</samp> What is Data Science</h5>
+                <h6><samp class="font-weight-bold">Org:</samp> IBM, Coursera</h6>
+              </figcaption>
             </div>
 
           </div>
         </div>
 
-        <div class="col-sm-3 pb-3 element-item projects">
+        <div class="col-sm-4 pb-3 element-item projects">
           <div class="our-project">
             <div class="img">
               <img src="img/project-1.jpg" alt="portfolio-1" class="img-fluid">
@@ -809,7 +846,7 @@
 
     <div class="container">
       <h1 data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300">Contact Me</h1>
-      <div class="row" >
+      <div class="row">
         <div class="col-sm-6" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
           <div class="row">
             <div class="col-sm-12">
@@ -873,7 +910,7 @@
         <div class="col-sm-6" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
           <div class="card">
             <div class="card-body">
-              
+
               <form>
                 <div class="form-group">
                   <div class="row">
@@ -881,7 +918,8 @@
                       <label for="name">Name</label>
                     </div>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter Full Name">
+                      <input type="text" class="form-control" id="name" aria-describedby="nameHelp"
+                        placeholder="Enter Full Name">
                     </div>
                   </div>
                 </div>
@@ -892,7 +930,8 @@
                       <label for="email">Email</label>
                     </div>
                     <div class="col-sm-9">
-                      <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Email">
+                      <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                        placeholder="Enter Email">
                     </div>
                   </div>
                 </div>
@@ -903,14 +942,15 @@
                       <label for="msg">Message</label>
                     </div>
                     <div class="col-sm-9">
-                      <textarea class="form-control" id="msg" aria-describedby="Msg" placeholder="Your Message" rows="5"></textarea>
+                      <textarea class="form-control" id="msg" aria-describedby="Msg" placeholder="Your Message"
+                        rows="5"></textarea>
                     </div>
                   </div>
                 </div>
 
                 <button type="submit" class="btn btn-primary float-right">Send Message</button>
               </form>
-              
+
             </div>
           </div>
         </div>
@@ -926,22 +966,22 @@
   </footer>
 
 
-  
+
   <script src="js/circle.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-  
-  
+
+
   <script src="js/animation.js"></script>
   <script src="js/animation1.js"></script>
   <script src="plugin/isotope.min.js"></script>
   <script src="plugin/smooth-scroll.js"></script>
   <script src="plugin/aos.js"></script>
   <script>
-    var scroll = new SmoothScroll('a[href*="#"]', { });
+    var scroll = new SmoothScroll('a[href*="#"]', {});
   </script>
 
   <script type="text/javascript">
