--- a/site/index.html
+++ b/site/index.html
@@ -221,7 +221,7 @@
                 <li>Sketch</li>
               </ul>
             </div>
-            <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button"
+            <a class="btn s_btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button"
               target="_blank">See More</a>
           </div>
         </div>
@@ -252,7 +252,8 @@
                 <li>Cpanel</li>
               </ul>
             </div>
-            <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button"
+            <a class="btn s_btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442"
+              role="button"
               target="_blank">See More</a>
           </div>
         </div>
@@ -285,7 +286,8 @@
                 <li>Inception V3</li>
               </ul>
             </div>
-            <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button"
+            <a class="btn s_btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442"
+              role="button"
               target="_blank">See More</a>
           </div>
         </div>
@@ -705,24 +707,41 @@
       </div>
 
       <div class="text-center pb-5">
-        <button type="button" class="btn active" id="btn1" data-filter="*">All Categories</button>
-        <button type="button" class="btn" data-filter=".certificates">Certificates</button>
-        <button type="button" class="btn" data-filter=".uiux">Ui/Ux</button>
-        <button type="button" class="btn" data-filter=".projects">Projects</button>
-        <button type="button" class="btn" data-filter=".publications">Publications</button>
-        <button type="button" class="btn" data-filter=".upcoming">Upcoming</button>
+        <button type="button" class="btn p_btn active" id="btn1" data-filter="*">All Categories</button>
+        <button type="button" class="btn p_btn" data-filter=".certificates">Certificates</button>
+        <button type="button" class="btn p_btn" data-filter=".uiux">Ui/Ux</button>
+        <button type="button" class="btn p_btn" data-filter=".projects">Projects</button>
+        <button type="button" class="btn p_btn" data-filter=".publications">Publications</button>
+        <button type="button" class="btn p_btn" data-filter=".upcoming">Upcoming</button>
       </div>
 
       <div class="row">
+
         <div class="col-sm-4 pb-3 certificates">
           <div class="our-project">
-
             <div class="img imghvr-flip-vert">
                 <img src="img/c-1.jpg" alt="certificates-1" class="img-fluid">
-                <figcaption >
-                  <h5 class="pt-4"><samp class="font-weight-bold">Course:</samp> Introduction To Cybersecurity</h5>
+                <figcaption>
+                  <h5><samp class="font-weight-bold">Course:</samp> Introduction To Cybersecurity</h5>
                   <h6><samp class="font-weight-bold">Org:</samp> Cisco Network Academy</h6>
+                  <button class="btn button_p" type="submit"
+                    onclick="document.location.href='https://www.youracclaim.com/badges/be5a9b9a-30b8-4e32-b19d-fff7bb918aa1';">See More</button>
                 </figcaption>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4 pb-3 element-item projects">
+          <div class="our-project">
+            <div class="img imghvr-shutter-in-out-vert">
+              <img src="img/w1.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5><samp class="font-weight-bold">Name:</samp> Online Music Concert Ticket Buy </h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/web-design/Design-4/index.html';">See
+                  More</button>
+              </figcaption>
             </div>
           </div>
         </div>
@@ -749,7 +768,36 @@
                 <h6><samp class="font-weight-bold">Tools:</samp> Adobe XD, Prototype, Figma</h6>
               </figcaption>
             </div>
+          </div>
+        </div>
 
+        <div class="col-sm-4 pb-3 element-item projects">
+          <div class="our-project">
+            <div class="img imghvr-shutter-in-out-vert">
+              <img src="img/w2.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5><samp class="font-weight-bold">Name:</samp> Static Template </h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/web-design/Design-3/index.html';">See
+                  More</button>
+              </figcaption>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4 pb-3 element-item projects">
+          <div class="our-project">
+            <div class="img imghvr-shutter-in-out-vert">
+              <img src="img/w3.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5><samp class="font-weight-bold">Name:</samp> Static Template </h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/web-design/Design-2/index.html';">See
+                  More</button>
+              </figcaption>
+            </div>
           </div>
         </div>
 
@@ -762,7 +810,37 @@
                 <h6><samp class="font-weight-bold">Org:</samp> A2i</h6>
               </figcaption>
             </div>
+          </div>
+        </div>
 
+        <div class="col-sm-4 pb-3 element-item projects">
+          <div class="our-project">
+            <div class="img imghvr-shutter-in-out-vert">
+              <img src="img/w4.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5><samp class="font-weight-bold">Name:</samp> Static Template </h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery, OWL Carousel,
+                  Fontawsone</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/web-design/Design-1/index.html';">See
+                  More</button>
+              </figcaption>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-sm-4 pb-3 element-item projects">
+          <div class="our-project">
+            <div class="img imghvr-shutter-in-out-vert">
+              <img src="img/w5.png" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5><samp class="font-weight-bold">Name:</samp> Personal Portfolio </h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery, OWL Carousel, Fontawsone</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/web-design/kubb/index.html';">See
+                  More</button>
+              </figcaption>
+            </div>
           </div>
         </div>
 
@@ -807,8 +885,15 @@
 
         <div class="col-sm-4 pb-3 element-item projects">
           <div class="our-project">
-            <div class="img">
+            <div class="img imghvr-shutter-in-out-vert">
               <img src="img/project-1.jpg" alt="portfolio-1" class="img-fluid">
+              <figcaption>
+                <h5 class="pt-4"><samp class="font-weight-bold">Name:</samp> XYZ IT Solution</h5>
+                <h6><samp class="font-weight-bold">Tools:</samp> Html, Css, Js, Bootstrap, Jquery</h6>
+                <button class="btn button_p" type="submit"
+                  onclick="document.location.href='https://hasibul442.github.io/XYZ-it-Solution/XYZ-it%20solution/';">See
+                  More</button>
+              </figcaption>
             </div>
           </div>
         </div>
@@ -826,7 +911,7 @@
           <h2 class="pt-5 headline">Interested To Work</h2>
           <p>I am available for doing UiUx design, Python Application Development, Web Development, Java Desktop
             Application, Web hosting, AI and ML. Feel free to contact me</p>
-          <a class="btn mt-3" href="#contact" role="button">Contact</a>
+          <a class="btn w_btn mt-3" href="#contact" role="button">Contact</a>
         </div>
       </div>
     </div>
